test/libyul/yulSyntaxTests/number_literals_3.yul
{
	let x := 1e5
}
// ----
// ParserError 4828: (12-15): Invalid number literal.
